--- a/src/components/TopLeftBox.css
+++ b/src/components/TopLeftBox.css
@@ -15,6 +15,16 @@
     left: 33.1px;  
 }
 
+.about-project-button{
+    background: none;
+	color: inherit;
+	border: none;
+	padding: 0;
+	font: inherit;
+	cursor: pointer;
+	outline: inherit;
+}
+
 .about-project{
     height: 20px;
     font-family: Poppins;
@@ -30,6 +40,16 @@
     top: 33px;
     right: 33px;  
 }
+
+.about-project:hover{
+    filter: brightness(120%);
+}
+
+.about-project:active{
+    -webkit-transform: translateY(1px);
+    transform: translateY(1px);
+}
+
 
 @font-face {
     font-family: 'Poppins';
