--- a/src/components/About.css
+++ b/src/components/About.css
@@ -35,7 +35,7 @@
 
 .about-body{
     background-color: #ffffff;
-    margin: 32px 48px 110px 64px;
+    margin: 32px 3% 110px 3%;
     border-radius: 8px;
     box-shadow: 0 3px 16px 0 rgba(0, 0, 0, 0.08);
     padding: 62px 9% 0 9%;
@@ -74,7 +74,7 @@
 }
 
 .about-merry-go-round{
-    height:800px;
+    height:700px;
     width:60%;
     overflow: hidden;
     display:block;
@@ -97,7 +97,7 @@
     width: 428px;
     height: 20px;
     font-family: Poppins-light;
-    font-size: 14px;
+    font-size: 1.3vh;
     font-weight: normal;
     font-stretch: normal;
     font-style: normal;
@@ -108,6 +108,7 @@
     display: inline-block;
     margin-left: calc(50% - 214px);
     margin-top:19px;
+    white-space: nowrap;
 }
 
 .p{
