--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -1,5 +1,5 @@
 .background2 {
-    width: 100vw;
+    width: 100%;
     height: 59px;
     background-image: linear-gradient(273deg, #6d38de, #dd2ad8);
     position: absolute;
@@ -9,20 +9,20 @@
 
 .copyright{
     width: 428px;
-    height: 20px;
     font-family: Poppins-light;
-    font-size: 14px;
+    font-size: 1.3vh;
     font-weight: normal;
     font-stretch: normal;
     font-style: normal;
-    line-height: 1.29;
     letter-spacing: normal;
-    text-align: left;
+    text-align: center;
+    display: inline;
     color: #f0d1ff;
-
+    white-space: nowrap;
     position: absolute;
     top: 50%; left: 50%;
     transform: translate(-50%,-50%);
+
 }
 
 @font-face {
